syntax = "proto3";

option java_multiple_files = true;
option java_package = "cn.com.hawkeye.device";
option java_outer_classname = "DeviceManagerProto";
option objc_class_prefix = "HLW";

package device;

service DeviceManager {
  //
  rpc registerToServer (ClientInfo) returns (stream Message) {}
  
  //登陆
  rpc login(LoginRequest) returns(stream Message){}
  
  //订阅
  rpc sub(LoginRequest) returns(stream Message){}
  
  //发送信息
  rpc sendMsg(Message) returns (ErrorInfo) {}
  

}

message ClientInfo{
   string clientId = 1;
}

message SubRequest{
   string clientId = 1;
}

message LoginRequest {
	string clientId = 1;
	string username = 2;
	string password = 3;
}

message Message {
    int32 msgId = 1;
    string sender = 2;
    string receiver = 3;  //msg receiver //和clientId字段的值一样
    string content = 4;  //msg content
}

message ErrorInfo {
	int32 code = 1;
	string msg = 2;
}